# Deep_Learning_1

./: .gitignore  README.md  pyproject.toml
notebooks/: [homework]dense_and_convolutional_nn.ipynb  [homework]knn.ipynb  [hw]autoencoders.ipynb  [hw]gan.ipynb  [hw]semantic_segmentation.ipynb  simple_cnn_baseline.csv  simpsons_baseline.ipynb  simpsons_hw.ipynb  simpsons_my_work.ipynb
notebooks/12_2_Продвинутое_обучение_нейросетей/: [seminar]pytorch_bn_dropout.ipynb  [seminar]pytorch_optimizers.ipynb
