[tool.poetry]
name = "deep-learning-1"
version = "0.1.0"
description = ""
authors = ["Nikc-mk <3kaal6@gmail.com>"]
readme = "README.md"
packages = [{include = "deep_learning_1"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.0.6"
scikit-learn = "^1.3.1"
pandas = "^1.4.1"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

