[tool.poetry]
name = "deep-learning-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.18"
pandas = "^1.5"
jupyter = "^1.0.0"
lab = "^8.0"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
torchvision = "^0.15.0"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
scikit-image = "^0.22.0"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
